[build-system]
requires = ["hatchling>=0.7", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "mapyde"
dynamic = ["version"]
authors = [
    { name = "Giordon Stark", email = "kratsg@gmail.com" },
]
maintainers = [
    { name = "Mike Hance", email = "mhance@ucsc.edu" },
]

description = "Generation, simulation, analysis, and statistical inference in one go."
readme = "README.md"

requires-python = ">=3.7"

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 1 - Planning",
]

dependencies = [
    "typing_extensions >=3.7; python_version<'3.8'",
    "typer",
    "toml",
    "jinja2",
    "in_place",
    "importlib_resources>=1.3.0; python_version<'3.9'",  # for resources in schema
]

[project.optional-dependencies]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
    "tbump>=6.7.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.6",
    # Plugins
    "mkdocs-minify-plugin>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0",
    "mkdocstrings[python]>=0.18",
    "mkdocs-redirects>=1.1.0",
    "mkdocs-glightbox>=0.3.0",
    # https://github.com/jimporter/mike/issues/82#issuecomment-1172913929
    "mike @ https://github.com/jimporter/mike/archive/392d57b8bb9d14bcedf2451a0dc302709f8055eb.zip",
    # Extensions
    "mkdocs-click>=0.8.0",
    "pymdown-extensions>=9.7.0",
    # Necessary for syntax highlighting in code blocks
    "pygments>=2.13.0",
    # Validation
    # https://github.com/linkchecker/linkchecker/pull/669#issuecomment-1267236287
    "linkchecker @ git+https://github.com/linkchecker/linkchecker.git@d9265bb71c2054bf57b8c5734a4825d62505c779",
    # auto-generation of docs
    "mkdocs-gen-files>=0.4",
    "mkdocs-literate-nav>=0.5.0",
    "mkdocs-section-index>=0.3.4",
]

[project.urls]
homepage = "https://github.com/scipp-atlas/mario-mapyde"
tracker = "https://github.com/scipp-atlas/mario-mapyde/issues"
source = "https://github.com/scipp-atlas/mario-mapyde"

[project.scripts]
mapyde = "mapyde.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/mapyde/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
  "/ci",
  "/Dockerfiles",
  "/stats/",
  "/test/",
  "/noxfile.py",
  "/.*",
  "/*.sh",
  "/*.toml", # note: does not remove pyproject.toml
]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel.shared-data]
"cards" = "share/mapyde/cards"
"likelihoods" = "share/mapyde/likelihoods"
"scripts" = "share/mapyde/scripts"
"templates" = "share/mapyde/templates"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]


[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = 'in_place'
ignore_missing_imports = true

[tool.isort]
profile = "black"


[tool.pylint]
master.py-version = "3.7"
master.ignore-paths= ["src/mapyde/_version.py", "src/mapyde/data"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]
